# stl-algorithms-addons

./: CMakeLists.txt  README.md
algo/: CMakeLists.txt  py_algo.h
tests/: CMakeLists.txt  py_algo_tests.cpp
